# Hark

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  agents.md  audit_out.json  instructions.md  outdated_full.txt  package.json
.cargo/: audit.toml
.claude/: bp-audit.md
.claude/agent-memory/: debugging.md  patterns.md
.claude/agent-memory/explorer/: MEMORY.md  hark_cloud_stt_providers.md  hark_cloud_stt_rust_stack.md  hark_llm_cleanup_chat_models.md  hark_local_stt_2026.md  hark_phonetic_correction_crates.md  hark_stt_stack_risk.md  sherpa_onnx_rust_api.md
.claude/references/: design-guardrails.md  tools.md
.claude/rules/: bp-check.md  commit-changelog.md  llg-check.md  rust.md  tests.md
.github/: RELEASING.md
.github/workflows/: release.yml
Docs/: GETTING_STARTED.md  GLOSSARY.md  OVERVIEW.md  README.md  _toc.yaml
Docs/_meta/: GENERATION.md  SUMMARY.md
Docs/core/: ARCHITECTURE.md  CONFIGURATION.md  DATA_STORAGE.md
Docs/features/: AUDIO_CAPTURE.md  DESKTOP_UI.md  DICTIONARY.md  INVOCATIONS.md  ON_DEVICE_STT.md  TEXT_INJECTION.md  TRANSCRIPTION.md  UPDATES_AND_AUTOSTART.md  VOICE_CLEANUP.md
Docs/operations/: RELEASE_AND_PACKAGING.md
config/: default-config.toml
crates/hark-app/: CLAUDE.md  Cargo.toml
crates/hark-app/assets/: README.md
crates/hark-app/src/: app.rs  main.rs  model_download.rs  overlay.rs  pipeline.rs  storage.rs  theme.rs  update.rs
crates/hark-app/src/tray/: icon.rs  mod.rs
crates/hark-app/src/ui/: dictionary.rs  footer.rs  format.rs  mod.rs  pages.rs  shell.rs  stats.rs  widgets.rs
crates/hark-app/src/ui/history/: mod.rs  row.rs
crates/hark-app/src/ui/invocations/: editor.rs  mod.rs
crates/hark-app/src/ui/settings/: capture.rs  cleanup.rs  form.rs  get_started.rs  keys.rs  local.rs  mod.rs  test.rs  updates.rs
crates/hark-audio/: CLAUDE.md  Cargo.toml
crates/hark-audio/src/: capture_win.rs  gain.rs  level.rs  lib.rs  resample.rs  ring.rs  window.rs
crates/hark-autostart/: Cargo.toml
crates/hark-autostart/src/: lib.rs
crates/hark-cli/: Cargo.toml
crates/hark-cli/src/: main.rs
crates/hark-config/: Cargo.toml
crates/hark-config/src/: invocations.rs  lib.rs  local.rs  voice.rs
crates/hark-dictionary/: Cargo.toml
crates/hark-dictionary/src/: expander.rs  lib.rs  matcher.rs  tokenize.rs
crates/hark-hotkey/: CLAUDE.md  Cargo.toml
crates/hark-hotkey/src/: edges.rs  hook_win.rs  lib.rs
crates/hark-inject/: CLAUDE.md  Cargo.toml
crates/hark-inject/src/: clipboard.rs  keys.rs  lib.rs
crates/hark-keychain/: Cargo.toml
crates/hark-keychain/src/: lib.rs
crates/hark-local-stt/: Cargo.toml
crates/hark-local-stt/src/: download.rs  engine.rs  error.rs  lib.rs  model.rs
crates/hark-local-stt/tests/: engine_real_model.rs
crates/hark-pipeline/: Cargo.toml
crates/hark-pipeline/src/: events.rs  lib.rs  local.rs  retry.rs  state.rs  worker.rs
crates/hark-pipeline/tests/: assembly.rs
crates/hark-single-instance/: Cargo.toml
crates/hark-single-instance/src/: lib.rs
crates/hark-store/: Cargo.toml
crates/hark-store/migrations/: 001_init.sql  002_stats_total_ms.sql  003_entries_invocation.sql
crates/hark-store/src/: lib.rs
crates/hark-store/tests/: store.rs
crates/hark-stt/: Cargo.toml
crates/hark-stt/examples/: gemini_spike.rs  transcribe_spike.rs
crates/hark-stt/fixtures/: expected.txt
crates/hark-stt/src/: config.rs  deepgram.rs  error.rs  fixture.rs  gemini.rs  lib.rs  metrics.rs  openai_compatible.rs  wav.rs
crates/hark-stt/tests/: adapter_pure.rs  gemini_pure.rs
crates/hark-update/: Cargo.toml
crates/hark-update/src/: lib.rs  verify.rs
crates/hark-voice/: Cargo.toml
crates/hark-voice/examples/: cleanup_spike.rs
crates/hark-voice/src/: error.rs  lib.rs  openai_compatible.rs  voices.rs
crates/hark-voice/tests/: chat_pure.rs  voices_pure.rs
design_handoff_hark_redesign/: README.md  nocturne-styles.css
installer/: hark.iss
tasks/: 2026-07-15-phase1-stt-spike.md  2026-07-16-handoff-phase4-cp2.md  2026-07-16-handoff-phase4-cp3.md  2026-07-16-handoff-phase4-cp4.md  2026-07-16-handoff-phase4-cp5.md  2026-07-16-handoff-phase4-planning.md  2026-07-16-phase1-pipeline.md  2026-07-16-phase2-dictionary.md  2026-07-16-phase3-voices.md  2026-07-16-phase4-ui-storage.md  2026-07-17-handoff-phase4-cp7.md  2026-07-17-handoff-phase5.md  2026-07-17-windows-installer-autostart.md  i-want-to-be-rippling-treasure.md  majestic-percolating-puffin.md  plan-local-stt.md  plan-mic-input-gain.md  plan-repo.md
