[workspace]
resolver = "2"
members = [
    "crates/hark-audio",
    "crates/hark-cli",
    "crates/hark-config",
    "crates/hark-dictionary",
    "crates/hark-hotkey",
    "crates/hark-inject",
    "crates/hark-keychain",
    "crates/hark-pipeline",
    "crates/hark-stt",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
license = "MIT"
