[workspace]
resolver = "2"
members = [
    "crates/hark-app",
    "crates/hark-audio",
    "crates/hark-cli",
    "crates/hark-config",
    "crates/hark-dictionary",
    "crates/hark-hotkey",
    "crates/hark-inject",
    "crates/hark-keychain",
    "crates/hark-pipeline",
    "crates/hark-store",
    "crates/hark-stt",
    "crates/hark-voice",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
# 1.97+: libsqlite3-sys 0.38.1 (rusqlite bundled SQLite) uses cfg_select!,
# which is unstable before then. Verified on 1.97.1 (2026-07-16).
rust-version = "1.97"
license = "MIT"
