[workspace]
resolver = "2"
members = [
    "crates/hark-app",
    "crates/hark-autostart",
    "crates/hark-audio",
    "crates/hark-config",
    "crates/hark-dictionary",
    "crates/hark-hotkey",
    "crates/hark-inject",
    "crates/hark-keychain",
    "crates/hark-pipeline",
    "crates/hark-store",
    "crates/hark-stt",
    "crates/hark-update",
    "crates/hark-voice",
]

[workspace.package]
# Kept in lockstep with package.json (the release source of truth): the built
# binary reports this via env!("CARGO_PKG_VERSION"), and the update checker
# compares it against GitHub release tags. release.yml fails if they drift.
version = "0.14.0"
edition = "2021"
# 1.97+: libsqlite3-sys 0.38.1 (rusqlite bundled SQLite) uses cfg_select!,
# which is unstable before then. Verified on 1.97.1 (2026-07-16).
rust-version = "1.97"
license = "MIT"
