[package]
name = "hark-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Hark desktop app: eframe window (and later tray) on the main thread, dictation pipeline on worker threads."

[dependencies]
# `persistence` remembers window geometry across launches (spec §3.9).
eframe = { version = "0.35.0", features = ["persistence"] }
egui = "0.35.0"
env_logger = "0.11"
hark-autostart = { path = "../hark-autostart" }
hark-config = { path = "../hark-config" }
# Direct deps beyond the pipeline: microphone enumeration for the input-device
# picker (hark-audio), chord validation for the hotkey field (hark-hotkey), and
# the settings test-connection flow, which drives the STT and cleanup adapters
# directly on a background thread (hark-stt, hark-voice).
hark-audio = { path = "../hark-audio" }
hark-hotkey = { path = "../hark-hotkey" }
hark-keychain = { path = "../hark-keychain" }
hark-pipeline = { path = "../hark-pipeline" }
hark-store = { path = "../hark-store" }
hark-stt = { path = "../hark-stt" }
# In-app update checker + Windows self-update (GitHub Releases). Reuses the
# shared reqwest client from hark-stt.
hark-update = { path = "../hark-update" }
hark-voice = { path = "../hark-voice" }
# Local-timezone day grouping and timestamps for the history panel; bundles
# its own tzdb on Windows (no registry parsing).
jiff = "0.2"
log = "0.4"
# Tray icon + menu (muda arrives re-exported as `tray_icon::menu`). Created
# on the main thread after the event loop starts (spec §3.8).
tray-icon = "0.24.1"
