[package]
name = "hark-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Hark desktop app: eframe window (and later tray) on the main thread, dictation pipeline on worker threads."

[dependencies]
# `persistence` remembers window geometry across launches (spec §3.9).
eframe = { version = "0.35.0", features = ["persistence"] }
egui = "0.35.0"
env_logger = "0.11"
hark-autostart = { path = "../hark-autostart" }
hark-config = { path = "../hark-config" }
# Direct deps beyond the pipeline: microphone enumeration for the input-device
# picker (hark-audio), chord validation for the hotkey field (hark-hotkey), and
# the settings test-connection flow, which drives the STT and cleanup adapters
# directly on a background thread (hark-stt, hark-voice).
hark-audio = { path = "../hark-audio" }
hark-hotkey = { path = "../hark-hotkey" }
hark-keychain = { path = "../hark-keychain" }
# Opt-in on-device STT: model catalog, download manager, and (behind the
# "local-engine" feature below) the native engine itself.
hark-local-stt = { path = "../hark-local-stt" }
hark-pipeline = { path = "../hark-pipeline" }
# Guards against a second process (autostart + a manual launch) racing this
# one for the keyboard hook, the tray, and the history DB.
hark-single-instance = { path = "../hark-single-instance" }
hark-store = { path = "../hark-store" }
hark-stt = { path = "../hark-stt" }
# In-app update checker + Windows self-update (GitHub Releases). Reuses the
# shared reqwest client from hark-stt.
hark-update = { path = "../hark-update" }
hark-voice = { path = "../hark-voice" }
# Local-timezone day grouping and timestamps for the history panel; bundles
# its own tzdb on Windows (no registry parsing).
jiff = "0.2"
log = "0.4"
# Tray icon + menu (muda arrives re-exported as `tray_icon::menu`). Created
# on the main thread after the event loop starts (spec §3.8).
tray-icon = "0.24.1"

[features]
# On by default so a stock build can actually use on-device STT. Building
# with --no-default-features drops the native sherpa-onnx + ONNX Runtime
# link, which is ~28 MB of binary (measured 2026-07-21, linux-x64), for a
# slim cloud-only artifact. The Settings section explains itself in that
# build rather than offering a toggle that cannot work.
default = ["local-engine"]
local-engine = ["hark-local-stt/engine", "hark-pipeline/engine"]
