[package]
name = "hark-pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Hark dictation pipeline: worker-thread state machine gluing audio capture, push-to-talk, cloud STT, and injection. Owns the pre-warmed shared HTTP client."

[dependencies]
hark-audio = { path = "../hark-audio" }
hark-config = { path = "../hark-config" }
hark-dictionary = { path = "../hark-dictionary" }
hark-hotkey = { path = "../hark-hotkey" }
hark-inject = { path = "../hark-inject" }
# Opt-in on-device STT. The native engine sits behind this crate's own
# "engine" feature, forwarded from hark-app; without it only the model
# download/management half compiles in.
hark-local-stt = { path = "../hark-local-stt" }
hark-keychain = { path = "../hark-keychain" }
hark-stt = { path = "../hark-stt" }
hark-voice = { path = "../hark-voice" }
log = "0.4"
# Only to NAME the shared client type hark-stt hands us (and fire the
# pre-warm request). Same version/features as hark-stt; cargo unifies them.
reqwest = { version = "0.13", default-features = false, features = ["blocking"] }
thiserror = "2"

[features]
default = []
# Forwarded by hark-app; pulls the ~28 MB native sherpa-onnx engine in.
engine = ["hark-local-stt/engine"]
