[package]
name = "hark-stt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Hark on-device speech-to-text engine: sherpa-onnx + Parakeet TDT 0.6B v2 (English)."

[dependencies]
# Official k2-fsa Rust bindings (module path `sherpa_onnx`); NOT the deprecated `sherpa-rs`.
# Default feature `static` links a prebuilt native lib that build.rs auto-downloads
# (no manual ONNX Runtime install). Set SHERPA_ONNX_LIB_DIR to override.
sherpa-onnx = "1.13.4"
thiserror = "2"
