[package]
name = "hark-stt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Hark BYOK cloud speech-to-text: SttProvider trait with OpenAI-compatible and Deepgram adapters."

[dependencies]
# reqwest 0.13 renamed the 0.12 TLS umbrella features: "rustls-tls-webpki-roots"
# is now "rustls" + "webpki-roots" (no OS cert store, fully static trust roots).
# No "multipart" feature: reqwest streams multipart bodies, which masks
# connect/timeout errors as opaque body errors; we assemble multipart by hand.
reqwest = { version = "0.13", default-features = false, features = [
    "blocking",
    "rustls",
    "webpki-roots",
    "json",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
hound = "3.5"
