[package]
name = "hark-stt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Hark BYOK cloud speech-to-text: SttProvider trait with OpenAI-compatible and Deepgram adapters."

[dependencies]
# reqwest 0.13 renamed the 0.12 TLS umbrella features: "rustls-tls-webpki-roots"
# is now "rustls" + "webpki-roots" (no OS cert store, fully static trust roots).
# No "multipart" feature: reqwest streams multipart bodies, which masks
# connect/timeout errors as opaque body errors; we assemble multipart by hand.
reqwest = { version = "0.13", default-features = false, features = [
    "blocking",
    "rustls",
    "webpki-roots",
    "json",
] }
# Gemini takes inline audio as base64 in a JSON body (there is no multipart
# path); already in the tree as a transitive dep, so no new vendor surface.
base64 = "0.22"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
hound = "3.5"
# The Gemini spike reuses the tuned voice prompts and the expansion guard
# rather than reinventing either inside the STT crate.
hark-voice = { path = "../hark-voice" }
