[package]
name = "hark-voice"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Hark BYOK voice layer: cleanup voices, prompt assembly, and the OpenAI-compatible chat-completions adapter."

[dependencies]
# reqwest 0.13 renamed the 0.12 TLS umbrella features: "rustls-tls-webpki-roots"
# is now "rustls" + "webpki-roots" (no OS cert store, fully static trust roots).
# Stanza copied verbatim from hark-stt (LL-G reqwest-013-tls-feature-rename).
# No "multipart" feature: chat-completions is a plain buffered JSON POST.
reqwest = { version = "0.13", default-features = false, features = [
    "blocking",
    "rustls",
    "webpki-roots",
    "json",
] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
# The cleanup spike reuses the STT crate's shared client (production wiring:
# one client per process) and its LatencyTally/contains_term helpers.
hark-stt = { path = "../hark-stt" }
